EREGCSC-2288 -- Subject List ToC for Policy Repository (#992)
* chore: package.lock updates

* feat: add SearchInput component and basic execute/clear methods

* chore: first steps to reduce complexity of url routing

* chore: simplify remove selection logic

* refactor: back button and final subject removal logic

* refactor: finish removing subject complexity

* refactor: greatly simplify watching route

* refactor: DRY

* refactor: more complexity reduction

* feat: persist searchQuery on back/forward and new tab links

* test: add search query tests; adjust existing tests

* chore: DRY

* test: add a11y testing and fix found issues

* test: add policy doc fixture

* feat: first pass as Subject TOC component

* feat: formatting, styling, etc

* feat: add placeholder count div for each subject

* feat: position sticky policy sidebar

* feat: tweaks per validation discussion

* test: fix failing test

* test: add subjects fixture

* test: add enough automated test coverage

* chore: hide subject counts in ToC for now

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -6,7 +6,6 @@
 
 #policyRepositoryApp.repository-view,
 #policyRepositorySearchApp.repository-search-view {
-    overflow: auto;
     margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
@@ -60,6 +59,11 @@
 
     .sidebar__filters {
         flex: 1;
+
+        .sticky-container {
+            position: sticky;
+            top: $header_height;
+        }
 
         .selections__container {
             .selections__list {
@@ -135,6 +139,67 @@
 
     .loading__span {
         padding: 0 1rem;
+    }
+
+    .subj-toc__container {
+        padding-left: 16px;
+
+        h1 {
+            font-size: 2.25rem;
+            margin-bottom: 0px;
+        }
+
+        ul.subj-toc__list {
+            padding: 0;
+
+            li.subj-toc__li {
+                list-style: none;
+                padding: 1rem 0.25rem;
+                border-bottom: 1px solid $border_color;
+
+                &:last-child {
+                    margin-bottom: 0;
+                    border-bottom: none;
+                }
+
+                a {
+                    text-decoration: none;
+
+                    &:hover,
+                    &:focus,
+                    &:active {
+                        cursor: pointer;
+                    }
+
+                    .subj-toc-li__div {
+                        display: inline-block;
+                        font-size: 1rem;
+                        line-height: 1.25rem;
+
+                        &--bold {
+                            font-weight: 700;
+                        }
+
+                        &.subj-toc-li__abbr {
+                            padding-right: 5px;
+                            margin-right: 5px;
+                            border-right: 1px solid $secondary_text_color;
+                        }
+                    }
+                }
+
+                .subj-toc-li__count {
+                    margin-top: 4px;
+                    font-size: 0.875rem;
+                    line-height: 1.25rem;
+                    color: $secondary_text_color;
+
+                    .subj-doc__count {
+                        font-weight: 700;
+                    }
+                }
+            }
+        }
     }
 
     .doc__list {
