feat: first opinionated pass at main policy repository

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -221,6 +221,10 @@
                 &--view {
                     font-size: $font-size-sm;
                 }
+
+                .search-highlight {
+                    text-decoration: underline;
+                }
             }
 
             .document__subjects {
