feat: style anchor differently if search result or not

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -222,8 +222,8 @@
                     font-size: $font-size-sm;
                 }
 
-                .search-highlight {
-                    text-decoration: underline;
+                &--search {
+                    font-weight: 400;
                 }
             }
 
