feat: add cms design system choice list

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -59,6 +59,15 @@
 
     .sidebar__filters {
         flex: 1;
+        margin-bottom: 1rem;
+
+        @mixin filter-container-styles {
+            padding: 0.75rem 1rem;
+            border: 2px solid $border_color;
+            border-radius: 4px;
+            margin-block-start: 1rem;
+            margin-block-end: 1rem;
+        }
 
         .sticky-container {
             position: sticky;
@@ -106,12 +115,30 @@
             }
         }
 
+        .doc-type__toggle {
+            @include filter-container-styles;
+
+            fieldset {
+                margin-top: 0;
+
+                label {
+                    margin: 0;
+                    font-size: 18px;
+                    line-height: 24px;
+                }
+
+                div:not(:last-child) {
+                    margin-bottom: 0.75rem;
+                }
+            }
+
+        }
+
         .subjects__list {
             height: 300px;
             overflow: scroll;
-            padding: 0.75rem 1rem;
-            border: 2px solid $border_color;
-            border-radius: 4px;
+
+            @include filter-container-styles;
 
             .subjects__li {
                 margin-bottom: 0.75rem;
