2290-enable-edit-button

--- a/solution/backend/regulations/templates/regulations/policy_repository.html
+++ b/solution/backend/regulations/templates/regulations/policy_repository.html
@@ -29,5 +29,6 @@
     data-statutes-url="{% url 'statutes' %}"
     data-host="{{ host }}"
     data-is-authenticated="{{ is_authenticated }}"
+    data-has-editable-job-code="{{ has_editable_job_code }}"
 ></div>
 {% endblock %}
