feat: change checkbox color to eRegs Design System blue

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -131,6 +131,9 @@ $jump_to_submit_active_focus: $dark_blue;
 
 $policy_subject_selected_chip_background: $dark_blue;
 
+$choice-checked-background-color: $mid_blue;
+$choice-checked-border-color: $mid_blue;
+
 // Borders
 
 $border_color: $light_gray;
