EREGCSC-2289 -- Enable Display of Public Docs in Policy Repo (#1005)
* feat: first pass at policy repo search updates

* feat: further refinement to content-search results

* feat: first opinionated pass at main policy repository

* feat: label tweaks

* feat: style anchor differently if search result or not

* feat: don't fetch DocList if there are no params

* feat: add cms design system choice list

* feat: watch v-model changes to update route

* feat: all or none selected logic

* feat: hook up doc types to API request

* feat: doc type label update; result item parts update

* feat: small subject chip style update

* feat: change checkbox color to eRegs Design System blue

* feat: allow 'all' type param

* feat: handle 'all' type param in policy repository view

* feat: sanitize watched query params before acting on them

* fix: don't set page when clearing search input

* test: update getRequestParams unit tests

* chore: cleanup

* fix: do not fetch policy docs on page load if type=all

* test: update policy docs fixture and intercept the new endpoint

* test: minimum viable e2e test coverage

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -59,6 +59,15 @@
 
     .sidebar__filters {
         flex: 1;
+        margin-bottom: 1rem;
+
+        @mixin filter-container-styles {
+            padding: 0.75rem 1rem;
+            border: 2px solid $border_color;
+            border-radius: 4px;
+            margin-block-start: 1rem;
+            margin-block-end: 1rem;
+        }
 
         .sticky-container {
             position: sticky;
@@ -106,12 +115,34 @@
             }
         }
 
+        .doc-type__toggle {
+            @include filter-container-styles;
+
+            fieldset {
+                margin-top: 0;
+
+                .ds-c-choice:checked + label::before {
+                    background-color: $mid_blue;
+                    border-color: $mid_blue;
+                }
+
+                label {
+                    margin: 0;
+                    font-size: 18px;
+                    line-height: 24px;
+                }
+
+                div:not(:last-child) {
+                    margin-bottom: 0.75rem;
+                }
+            }
+        }
+
         .subjects__list {
             height: 300px;
             overflow: scroll;
-            padding: 0.75rem 1rem;
-            border: 2px solid $border_color;
-            border-radius: 4px;
+
+            @include filter-container-styles;
 
             .subjects__li {
                 margin-bottom: 0.75rem;
@@ -221,6 +252,10 @@
                 &--view {
                     font-size: $font-size-sm;
                 }
+
+                &--search {
+                    font-weight: 400;
+                }
             }
 
             .document__subjects {
@@ -231,6 +266,11 @@
 
                 .subject__chip {
                     @include common-chip-styles;
+
+                    font-size: 11px;
+                    line-height: 18px;
+                    height: unset;
+                    padding: 2px 8px;
                 }
             }
         }
