--- a/solution/backend/regulations/templates/regulations/partials/footer.html
+++ b/solution/backend/regulations/templates/regulations/partials/footer.html
@@ -19,12 +19,12 @@
     </div>
     <div class="footer-middle match-middle">
         <h4>Legal Limitations of This Tool</h4>
-        <p>This tool is a compilation of materials published elsewhere that is made available for convenience. Although we have made efforts to ensure that the material presented is accurate, the rulemaking and regulation information presented on this tool is not an official edition of the <a href="https://www.govinfo.gov/app/collection/cfr" target="_blank" class="external">Code of Federal Regulations</a> or the <a href="https://federalregister.gov" target="_blank" class="external" aria-label="link to the Federal Register website">Federal Register</a>, which fully state their own contents. Additional relevant guidance or other interpretive materials may exist.</p><br/>
+        <p>This tool is a compilation of materials published elsewhere that is made available for convenience. Although we have made efforts to ensure that the material presented is accurate, the rulemaking and regulation information presented on this tool is not an official edition of the <a href="https://www.govinfo.gov/app/collection/cfr" target="_blank" rel="noopener noreferrer" class="external">Code of Federal Regulations</a> or the <a href="https://federalregister.gov" target="_blank" rel="noopener noreferrer" class="external" aria-label="link to the Federal Register website">Federal Register</a>, which fully state their own contents. Additional relevant guidance or other interpretive materials may exist.</p><br/>
         <p>Unless authorized by law to be binding, the guidance linked on this tool does not have the force and effect of law and is not meant to bind CMS or the public in any way, unless specifically incorporated into a contract. The guidance is intended only to provide clarity to the public regarding existing requirements under the law. This tool does not bind CMS or the public and creates no rights, obligations, or defenses, substantive or procedural, that are enforceable by any party in any manner.</p>
     </div>
     <div class="footer-right match-sides">
         <h4 class="last-update-footer">
-            Regulations up to date from <a href="https://www.ecfr.gov" target="_blank" class="external">
+            Regulations up to date from <a href="https://www.ecfr.gov" target="_blank" rel="noopener noreferrer" class="external">
                 eCFR
             </a> as of
                 {% if spa_footer %}
@@ -42,7 +42,7 @@
 
 <div class="print-footer">
     <em>
-        Regulations up to date from <a href="https://www.ecfr.gov" target="_blank" class="external">eCFR</a> as of <span class="last-updated-date-print">
+        Regulations up to date from <a href="https://www.ecfr.gov" target="_blank" rel="noopener noreferrer" class="external">eCFR</a> as of <span class="last-updated-date-print">
             <last-parser-success-date api-url={{ API_BASE }} ></last-parser-success-date>
         </span>.
     </em>
