feat: add rel where needed; add testing method to more test suites

--- a/solution/backend/regulations/templates/browser_not_supported.html
+++ b/solution/backend/regulations/templates/browser_not_supported.html
@@ -1,6 +1,13 @@
 {% load static %}
 
-<div id="browser-unsupported-modal" class="ds-c-dialog-wrap" data-state-name="browser-unsupported-modal" data-state="shown" aria-labelledby="dialog-heading" role="dialog">
+<div
+    id="browser-unsupported-modal"
+    class="ds-c-dialog-wrap"
+    data-state-name="browser-unsupported-modal"
+    data-state="shown"
+    aria-labelledby="dialog-heading"
+    role="dialog"
+>
     <div class="ds-c-dialog" role="document">
         <button
             data-state-name="browser-unsupported-modal"
@@ -16,41 +23,58 @@
             Close
         </button>
 
-            <div class="browser-not-supported">
-                <h2>Browser Not Supported</h2>
-                <p>You seem to be using a browser we don't support. We strongly recommend using one of these options for a better experience.</p>
-                <div class="ds-l-container">
-                    <div class="ds-l-row">
-                        <div class="ds-l-col">
+        <div class="browser-not-supported">
+            <h2>Browser Not Supported</h2>
+            <p>
+                You seem to be using a browser we don't support. We strongly
+                recommend using one of these options for a better experience.
+            </p>
+            <div class="ds-l-container">
+                <div class="ds-l-row">
+                    <div class="ds-l-col">
+                        <a
+                            href="https://www.mozilla.org/en-US/firefox/new/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                        >
+                            <h3>Firefox</h3>
+                            <img
+                                src="{% static 'images/firefox.svg' %}"
+                                alt="Mozilla Firefox"
+                            />
+                        </a>
+                    </div>
 
-                            <a href="https://www.mozilla.org/en-US/firefox/new/" target="_blank">
-                                <h3>Firefox</h3>
-                                <img src="{% static 'images/firefox.svg' %}" alt="Mozilla Firefox" />
-                            </a>
+                    <div class="ds-l-col">
+                        <a
+                            href="https://www.google.com/chrome/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                        >
+                            <h3>Chrome</h3>
+                            <img
+                                src="{% static 'images/chrome.svg' %}"
+                                alt="Google Chrome"
+                            />
+                        </a>
+                    </div>
 
-                        </div>
-
-                        <div class="ds-l-col">
-
-                            <a href="https://www.google.com/chrome/" target="_blank">
-                                <h3>Chrome</h3>
-                                <img src="{% static 'images/chrome.svg' %}" alt="Google Chrome" />
-                            </a>
-
-                        </div>
-
-                        <div class="ds-l-col">
-
-                            <a href="https://www.microsoft.com/en-us/edge" target="_blank">
-                                <h3>Edge</h3>
-                                <img src="{% static 'images/edge.svg' %}" alt="Microsoft Edge" />
-                            </a>
-
-                        </div>
+                    <div class="ds-l-col">
+                        <a
+                            href="https://www.microsoft.com/en-us/edge"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                        >
+                            <h3>Edge</h3>
+                            <img
+                                src="{% static 'images/edge.svg' %}"
+                                alt="Microsoft Edge"
+                            />
+                        </a>
                     </div>
                 </div>
-            </div> <!-- / .browser-not-supported  -->
-
+            </div>
+        </div>
+        <!-- / .browser-not-supported  -->
     </div>
 </div>
-
