--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -43,6 +43,7 @@
                 <a
                     href="https://docs.google.com/forms/d/e/1FAIpQLSdoovq7qgVRYsgLeZ7TrXNmnTU42iHCvr1x06CgcWQectlVAw/viewform"
                     target="_blank"
+                    rel="noopener noreferrer"
                     class="external"
                 >contact the team</a>.
             </p>
