--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -41,6 +41,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                         <a
                             href="https://www.youtube.com/watch?v=dqy8WCFedU4"
                             target="_blank"
+                            rel="noopener noreferrer"
                         >
                             <img
                                 src="{% static 'images/home_video.png' %}"
