--- a/solution/backend/regulations/templates/regulations/partials/footer.html
+++ b/solution/backend/regulations/templates/regulations/partials/footer.html
@@ -9,12 +9,12 @@
 
 <div class="flexbox site-footer">
     <div class="footer-left match-sides">
-        <a href="https://www.medicaid.gov/" target="_blank"><img src="{% static 'images/medicaid.png' %}" alt="Medicaid.gov logo with subtitle Keeping America Healthy" /></a>
+        <a href="https://www.medicaid.gov/" target="_blank" rel="noopener noreferrer"><img src="{% static 'images/medicaid.png' %}" alt="Medicaid.gov logo with subtitle Keeping America Healthy" /></a>
         <h5>Centers for Medicare &amp; Medicaid Services</h5>
         <div class="address">7500 Security Boulevard, Baltimore MD 21244</div>
         <div class="social">
-            <a href="https://twitter.com/cmsgov" target="_blank" aria-label="CMSgov Twitter page"><i class="fab fa-twitter fa-2x"></i></a>
-            <a href="http://www.youtube.com/user/CMSHHSgov" target="_blank" aria-label="CMSgov YouTube page"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="https://twitter.com/cmsgov" target="_blank" rel="noopener noreferrer" aria-label="CMSgov Twitter page"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="http://www.youtube.com/user/CMSHHSgov" target="_blank" rel="noopener noreferrer" aria-label="CMSgov YouTube page"><i class="fab fa-youtube fa-2x"></i></a>
         </div>
     </div>
     <div class="footer-middle match-middle">
