--- a/solution/backend/regulations/templates/admin/import_conversions.html
+++ b/solution/backend/regulations/templates/admin/import_conversions.html
@@ -6,7 +6,7 @@
         <p>Enter a URL containing valid Statute Link Conversions.</p>
         <p>Statute Link Conversions look like this: "<code>Sec. 1900. [42 U.S.C. 1396]</code>".</p>
         <p>If a table of contents is provided, statute title and section name will be automatically populated where possible, otherwise manual entry will be required.</p>
-        <p>For a more detailed guide, please <a target="_blank" href="https://docs.google.com/document/d/14se_BSANJ2Q7Y8OjOLpMLSAye5MpIEkOBhA9-_1RpJY/edit#">click here</a>.</p>
+        <p>For a more detailed guide, please <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/14se_BSANJ2Q7Y8OjOLpMLSAye5MpIEkOBhA9-_1RpJY/edit#">click here</a>.</p>
         <p><label for="url">URL:</label> <input type="url" size="50" name="url" id="url" placeholder="https://example.com/doc.xml" required /></p>
         <p><label for="act">Act:</label> <input type="text" size="50" name="act" id="act" placeholder="Social Security Act" required /></p>
         <input type="hidden" name="action" value="import_conversions" />
