EREGCSC-2312 -- Add `rel="noopener noreferrer"` to all external links (#1016)
* test: update homepage links and add testing method

* feat: add rel where needed; add testing method to more test suites

* test: add more testing methods where needed

* test: update link selector in new utility method

* test: add more rel tags

* test: add about page e2e spec

* fix: make ruff happy

* test: update snapshot to inclue rel tags

* feat: add rel tags to templatetag methods

* test: update pytest fixtures

* test: check for target=blank links as well

* test: remove new condition

* fix: change target=blank to target=_blank

--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -43,6 +43,7 @@
                 <a
                     href="https://docs.google.com/forms/d/e/1FAIpQLSdoovq7qgVRYsgLeZ7TrXNmnTU42iHCvr1x06CgcWQectlVAw/viewform"
                     target="_blank"
+                    rel="noopener noreferrer"
                     class="external"
                 >contact the team</a>.
             </p>
@@ -129,6 +130,7 @@
                                 href="https://www.federalregister.gov/"
                                 class="external"
                                 target="_blank"
+                                rel="noopener noreferrer"
                                 >Office of the Federal Register</a
                             >
                             once a day.
@@ -139,6 +141,7 @@
                                 href="https://www.govinfo.gov/app/collection/fr"
                                 class="external"
                                 target="_blank"
+                                rel="noopener noreferrer"
                                 >GovInfo Federal Register archive</a
                             >
                             to add links to selected rules before 1994 that may
@@ -171,6 +174,7 @@
                                 href="https://www.medicaid.gov"
                                 class="external"
                                 target="_blank"
+                                rel="noopener noreferrer"
                                 >Medicaid.gov</a
                             >. Subject matter experts on our team curate and
                             update these links.
@@ -182,6 +186,7 @@
                                 href="https://www.medicaid.gov/new-notable/index.html"
                                 class="external"
                                 target="_blank"
+                                rel="noopener noreferrer"
                                 >New &amp; Notable Resource Center</a
                             >, we add a link to display in the sidebar of each
                             relevant section and subpart.
