--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -61,10 +61,15 @@
         flex: 1;
         margin-bottom: 1rem;
 
-        @mixin filter-container-styles {
-            padding: 0.75rem 1rem;
+        @mixin filter-borders {
             border: 2px solid $border_color;
             border-radius: 4px;
+        }
+
+        @mixin filter-container-styles {
+            @include filter-borders;
+
+            padding: 0.75rem 1rem;
             margin-block-start: 1rem;
             margin-block-end: 1rem;
         }
@@ -138,11 +143,31 @@
             }
         }
 
+        .subjects__list-container {
+            @include filter-container-styles;
+
+            display: flex;
+            flex-direction: column;
+
+            label[for="subjectReduce"] {
+                font-size: 14px;
+            }
+
+            input#subjectReduce {
+                @include filter-borders;
+
+                height: 1.5rem;
+                margin: 12px 0;
+                padding: 4px;
+                box-sizing: content-box !important; // thanks, Vuetify
+            }
+        }
+
         .subjects__list {
             height: 300px;
             overflow: scroll;
-
-            @include filter-container-styles;
+            padding: 0;
+            margin: 0;
 
             .subjects__li {
                 margin-bottom: 0.75rem;
