feat: style matched substrings

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -181,6 +181,10 @@
                     color: #000;
                     width: 100%;
 
+                    .match {
+                        @include font-bold-keep-width;
+                    }
+
                     &:hover,
                     &:focus,
                     &:active {
