feat: left sidebar scrollable if taller than viewport height

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -31,6 +31,8 @@
         display: flex;
         border-right: none;
         border-bottom: 2px solid $border_color;
+        padding-left: 0px;
+        padding-right: 0px;
 
         @include screen-md {
             border-right: 2px solid $border_color;
@@ -75,8 +77,16 @@
         }
 
         .sticky-container {
-            position: sticky;
-            top: $header_height;
+            padding-left: 1rem;
+            padding-right: 1rem;
+
+            @include screen-md {
+                position: sticky;
+                top: $header_height;
+                max-height: calc(100vh - 90px);
+                overflow-y: auto;
+            }
+
         }
 
         .selections__container {
