--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -207,6 +207,14 @@ $font_size_hero_h1_tablet: 20px;
     }
 }
 
+@mixin font-bold-keep-width-reset {
+    text-shadow: none;
+
+    @supports (-webkit-text-stroke-width: 0.04ex) {
+        -webkit-text-stroke-width: 0;
+    }
+}
+
 //--------------------------
 // Breakpoints
 //--------------------------
