--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -226,8 +226,12 @@
                     color: #000;
                     width: 100%;
 
-                    .match {
+                    .match__container {
                         @include font-bold-keep-width;
+
+                        .match {
+                            @include font-bold-keep-width-reset;
+                        }
                     }
 
                     &:hover,
