--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -163,6 +163,14 @@
 
             display: flex;
             flex-direction: column;
+            min-height: 200px;
+
+            .subjects__loading {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex: 1;
+            }
 
             form {
                 display: flex;
