--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -4,6 +4,25 @@
 
 @import "../application_settings";
 
+@mixin common-remove-btn-styles {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $policy_subject_close_background;
+    color: $policy_subject_selected_chip_background;
+    border-radius: 4px;
+
+    &:hover,
+    &:focus,
+    &:active {
+        background-color: #c0c1c3;
+    }
+
+    i {
+        pointer-events: none;
+    }
+}
+
 #policyRepositoryApp.repository-view,
 #policyRepositorySearchApp.repository-search-view {
     margin-bottom: 1rem;
@@ -31,6 +50,8 @@
         display: flex;
         border-right: none;
         border-bottom: 2px solid $border_color;
+        padding-left: 0px;
+        padding-right: 0px;
 
         @include screen-md {
             border-right: 2px solid $border_color;
@@ -61,17 +82,29 @@
         flex: 1;
         margin-bottom: 1rem;
 
-        @mixin filter-container-styles {
-            padding: 0.75rem 1rem;
+        @mixin filter-borders {
             border: 2px solid $border_color;
             border-radius: 4px;
+        }
+
+        @mixin filter-container-styles {
+            @include filter-borders;
+
+            padding: 0.75rem 1rem;
             margin-block-start: 1rem;
             margin-block-end: 1rem;
         }
 
         .sticky-container {
-            position: sticky;
-            top: $header_height;
+            padding-left: 1rem;
+            padding-right: 1rem;
+
+            @include screen-md {
+                position: sticky;
+                top: $header_height;
+                max-height: calc(100vh - 90px);
+                overflow-y: auto;
+            }
         }
 
         .selections__container {
@@ -92,24 +125,11 @@
                     padding: 4px 8px;
 
                     button {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
                         width: 16px;
                         height: 16px;
                         margin-left: 8px;
-                        background-color: $policy_subject_close_background;
-                        color: $policy_subject_selected_chip_background;
-                        border-radius: 4px;
-                        &:hover,
-                        &:focus,
-                        &:active {
-                            background-color: #c0c1c3;
-                        }
 
-                        i {
-                            pointer-events: none;
-                        }
+                        @include common-remove-btn-styles;
                     }
                 }
             }
@@ -138,11 +158,69 @@
             }
         }
 
+        .subjects__list-container {
+            @include filter-container-styles;
+
+            display: flex;
+            flex-direction: column;
+            min-height: 200px;
+
+            .subjects__loading {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex: 1;
+            }
+
+            form {
+                display: flex;
+                flex-direction: column;
+                position: relative;
+
+                label[for="subjectReduce"] {
+                    font-size: 14px;
+                }
+
+                input#subjectReduce {
+                    @include filter-borders;
+
+                    flex: 1;
+                    height: 1.5rem;
+                    margin: 12px 0;
+                    padding: 4px 24px 4px 4px;
+                    box-sizing: content-box !important; // thanks, Vuetify
+
+                    &:focus,
+                    &:focus-visible,
+                    &:focus-within,
+                    &:active {
+                        outline: none !important;
+                        border: 2px solid $secondary_border_color !important;
+                    }
+                }
+
+                .subjects__filter-reset {
+                    @include common-remove-btn-styles;
+
+                    top: 50%;
+                    right: -3px;
+                    transform: translate(-50%);
+                    position: absolute;
+                    width: 20px;
+                    height: 20px;
+
+                    &--hidden {
+                        display: none;
+                    }
+                }
+            }
+        }
+
         .subjects__list {
             height: 300px;
             overflow: scroll;
-
-            @include filter-container-styles;
+            padding: 0;
+            margin: 0;
 
             .subjects__li {
                 margin-bottom: 0.75rem;
@@ -155,6 +233,14 @@
                     text-align: left;
                     color: #000;
                     width: 100%;
+
+                    .match__container {
+                        @include font-bold-keep-width;
+
+                        .match {
+                            @include font-bold-keep-width-reset;
+                        }
+                    }
 
                     &:hover,
                     &:focus,
