--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -327,7 +327,11 @@
         .doc-list__document {
             padding: 0.75rem 1rem;
             border-bottom: 1px solid $border_color;
-
+            position: relative;
+            a.edit-button {
+              position: absolute; top: 0; right: 0;
+              text-decoration: none;
+            }
             .document__info-block {
                 margin-bottom: 0.75rem;
             }
