fix: revert styles for search page rsrces result

--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -54,6 +54,15 @@
 
             .resources-results-content {
                 @include common-results-styles;
+
+                .result {
+                    &__link {
+                        a {
+                            text-decoration: none;
+                            display: block;
+                        }
+                    }
+                }
             }
 
             .search-results-count {
