style: remove prototype-specific style

--- a/solution/ui/regulations/css/scss/partials/_reg_text.scss
+++ b/solution/ui/regulations/css/scss/partials/_reg_text.scss
@@ -243,8 +243,7 @@
     fp-3,
     fp-4,
     fp-5,
-    fp-6,
-    .prototype-fp {
+    fp-6 {
         @include formula-special-border;
 
         color: $secondary_text_color;
