--- a/solution/ui/regulations/css/scss/partials/_reg_text.scss
+++ b/solution/ui/regulations/css/scss/partials/_reg_text.scss
@@ -243,7 +243,8 @@
     fp-3,
     fp-4,
     fp-5,
-    fp-6 {
+    fp-6,
+    .synthetic-part-fp {
         @include formula-special-border;
 
         color: $secondary_text_color;
