feat: default cursor if subject is already selected

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -245,7 +245,7 @@
                     &--selected {
                         @include font-bold-keep-width;
 
-                        cursor: default;
+                        pointer-events: none;
                     }
 
                     &:hover,
