--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -229,7 +229,7 @@
                     margin-bottom: 0;
                 }
 
-                button {
+                .sidebar-li__button {
                     text-align: left;
                     color: #000;
                     width: 100%;
@@ -240,6 +240,12 @@
                         .match {
                             @include font-bold-keep-width-reset;
                         }
+                    }
+
+                    &--selected {
+                        @include font-bold-keep-width;
+
+                        pointer-events: none;
                     }
 
                     &:hover,
