--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -341,6 +341,10 @@
             .document__link {
                 text-decoration: none;
 
+                &.external {
+                    display: block;
+                }
+
                 &--view {
                     font-size: $font-size-sm;
                 }
