--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -334,12 +334,14 @@
             padding: 0.75rem 1rem;
             border-bottom: 1px solid $border_color;
             position: relative;
+
             a.edit-button {
                 position: absolute;
-                top: 0;
-                right: 0;
+                top: 14px;
+                right: 16px;
                 text-decoration: none;
             }
+
             .document__info-block {
                 margin-bottom: 0.75rem;
             }
