--- a/solution/ui/regulations/css/scss/partials/_results_item.scss
+++ b/solution/ui/regulations/css/scss/partials/_results_item.scss
@@ -11,17 +11,29 @@
     line-height: 22px;
 }
 
+@mixin common-label-styles {
+    display: inline-block;
+    font-size: 11px;
+    width: fit-content;
+    margin-right: 5px;
+    border-radius: 3px;
+    padding: 2px 5px 3px;
+}
+
 .category-labels {
     margin-bottom: 5px;
 
+    .doc-type__label {
+        @include common-label-styles;
+
+        color: #FFF;
+        background: $mid_gray;
+    }
+
     .result-label {
-        display: inline-block;
-        font-size: 11px;
-        width: fit-content;
-        margin-right: 5px;
+        @include common-label-styles;
+
         background: #e3eef9;
-        border-radius: 3px;
-        padding: 2px 5px 3px;
 
         &.category-label {
             font-weight: 600;
