feat: flexbox-ify labels with gap

--- a/solution/ui/regulations/css/scss/partials/_results_item.scss
+++ b/solution/ui/regulations/css/scss/partials/_results_item.scss
@@ -15,13 +15,14 @@
     display: inline-block;
     font-size: 11px;
     width: fit-content;
-    margin-right: 5px;
     border-radius: 3px;
     padding: 2px 5px 3px;
 }
 
 .category-labels {
-    margin-bottom: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
 
     .doc-type__label {
         @include common-label-styles;
@@ -45,11 +46,7 @@
     margin-bottom: 24px;
 
     .category-labels {
-        margin-bottom: 4px;
-
-        .category-label {
-            margin-bottom: 4px;
-        }
+        margin-bottom: 8px;
     }
 
     &__context {
@@ -130,6 +127,10 @@
 
 // resources page has different styles
 .resources-content-container {
+    .result .category-labels {
+        margin-bottom: 12px;
+    }
+
     .related-sections {
         margin-bottom: 40px;
         color: $mid_gray;
