EREGCSC-2370 -- Move "Filter the subject list" into input field (#1073)
* feat: move label into input like vuetify's text input

* feat: just use aria-label and placeholder

* test: make sure placeholder attr exists

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -177,10 +177,6 @@
                 flex-direction: column;
                 position: relative;
 
-                label[for="subjectReduce"] {
-                    font-size: 14px;
-                }
-
                 input#subjectReduce {
                     @include filter-borders;
 
@@ -202,7 +198,7 @@
                 .subjects__filter-reset {
                     @include common-remove-btn-styles;
 
-                    top: 50%;
+                    top: calc(50% - 0.625rem);
                     right: -3px;
                     transform: translate(-50%);
                     position: absolute;
