--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -324,11 +324,11 @@
     .doc__list {
         .search-results-count {
             padding: 0 1rem;
+            margin-bottom: 2rem;
         }
 
         .doc-list__document {
-            padding: 0.75rem 1rem;
-            border-bottom: 1px solid $border_color;
+            padding: 0 1rem;
             position: relative;
 
             a.edit-button {
