chore: tweak edit button top position

--- a/solution/ui/regulations/css/scss/partials/_policy_repository.scss
+++ b/solution/ui/regulations/css/scss/partials/_policy_repository.scss
@@ -333,7 +333,7 @@
 
             a.edit-button {
                 position: absolute;
-                top: 14px;
+                top: 0;
                 right: 16px;
                 text-decoration: none;
             }
